<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tone Picker</string>
    <string name="app_description">MP3 Ringtone Picker</string>
    <string name="app_version">0.9.2.1</string>
    <string name="splash_title">Tone Picker v%s</string>
    <string name="splash_body">When applications need a ringtone they call RINGTONE PICKER. Use Tone Picker to set Music/MP3s for SMS, IM, Email, Ringtone, Notification, Alarms, Calendar, whatever.</string>
    <string name="app_about"><b>Based heavily on Rings Extended</b>"
written by "<u>Dianne Hackborn</u>"

 "<b>Source code available</b>"
"<u>http://github.com/lithium/tonepicker</u>"

 Published by Hlidskialf Software

 No warranty of any kind provided.
No affiliation with above parties implied."</string>
    <string name="volume_ringer">Ringer Volume</string>
    <string name="volume_music">Music Volume</string>
    <string name="volume_call">Call Volume</string>
    <string name="volume_alarm">Alarm Volume</string>
    <string name="volume_system">System Sound Volume</string>
    <string name="splash_button_label_ringtone">Set Ringtone</string>
    <string name="splash_button_label_notification">Set Notification</string>
    <string name="splash_button_ok_label">Dismiss</string>
    <string name="about_title">About Tone Picker</string>
    <string name="about">About</string>
    <string name="picker_title">Tone Picker will show installed mp3s</string>
    <string name="existingtone">Current Ringtone</string>
    <string name="defaulttone">Default Ringtone</string>
    <string name="audiosources">-- Audio Sources --</string>
    <string name="otherpickers">-- Other Ringtone Pickers --</string>
    <string name="silentLabel">Silent</string>
    <string name="defaultRingtoneLabel">Default ringtone</string>
    <string name="existingRingtoneLabel">Current ringtone</string>
    <string name="musicPickerName">Tone Picker</string>
    <string name="musicPickerTitle">Tone Picker - Select track</string>
    <string name="loading">Loading</string>
    <string name="noMusic">"No music files or
SD card not present."</string>
    <string name="sortByTrack">Tracks</string>
    <string name="sortByAlbum">Albums</string>
    <string name="sortByArtist">Artists</string>
    <string name="unknownArtistName">(Unknown Artist)</string>
    <string name="unknownAlbumName">(Unknown Album)</string>
    <string name="durationformat">%2$d:%5$02d</string>
    <string name="alphabet">" ABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
</resources>
