<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="12.0sp" android:gravity="center" android:id="@id/splash_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/splash_title" />
        <TextView android:gravity="center" android:id="@id/splash_body" android:layout_width="fill_parent" android:layout_height="73.0sp" android:text="@string/splash_body" />
        <RelativeLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/splash_button_ringtone" android:padding="12.0sp" android:paddingLeft="16.0sp" android:paddingRight="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/splash_button_label_ringtone" android:layout_alignParentLeft="true" />
            <Button android:id="@id/splash_button_notification" android:padding="8.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/splash_button_label_notification" android:layout_centerHorizontal="true" />
            <Button android:id="@id/splash_button_ok" android:padding="12.0sp" android:paddingLeft="16.0sp" android:paddingRight="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/splash_button_ok_label" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0sp" android:layout_marginRight="20.0sp">
            <SeekBar android:id="@id/volume_ringer" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:gravity="center" android:id="@id/volume_text_ringer" android:paddingBottom="12.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/volume_ringer" />
            <SeekBar android:id="@id/volume_music" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:gravity="center" android:id="@id/volume_text_music" android:paddingBottom="12.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/volume_music" />
            <SeekBar android:id="@id/volume_call" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:gravity="center" android:id="@id/volume_text_call" android:paddingBottom="12.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/volume_call" />
            <SeekBar android:id="@id/volume_system" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:gravity="center" android:id="@id/volume_text_system" android:paddingBottom="12.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/volume_system" />
            <SeekBar android:id="@id/volume_alarm" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:gravity="center" android:id="@id/volume_text_alarm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/volume_alarm" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>